Encoding finally works.