@@ -3,7 +3,11 @@ package studio.archetype.shutter.util;
 import com.google.common.collect.Lists;
 import studio.archetype.shutter.client.encoding.CommandProperty;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
@@ -30,8 +34,17 @@ public class CliUtils {
     }
 
     public static int runCommand(String command, CommandProperty... properties) throws IOException, InterruptedException {
-        final String cmd = command + " " + Stream.of(properties).map(CommandProperty::toString).collect(Collectors.joining(" "));
-        return Runtime.getRuntime().exec(cmd).waitFor();
+        List<String> args = Lists.newArrayList(command);
+        Stream.of(properties).forEach(p -> args.addAll(Lists.newArrayList(p.toString().split(" "))));
+        ProcessBuilder builder = new ProcessBuilder(args).redirectErrorStream(true);
+
+        Process process = builder.start();
+        try(BufferedReader reader = new BufferedReader (new InputStreamReader(process.getInputStream()))) {
+            while (process.isAlive())
+                reader.readLine();
+        }
+
+        return process.waitFor();
     }
 
     public static CompletableFuture<Integer> runCommandAsync(String command, CommandProperty... properties) {
